# wasmedge_asyncify

./: Cargo.toml  README.md  change.diff
.devcontainer/: devcontainer.json
examples/aot/: Cargo.toml
examples/aot/src/: main.rs
examples/async_wasi/: Cargo.toml
examples/async_wasi/src/: main.rs
examples/async_wasi_example/: Cargo.toml
examples/async_wasi_example/src/: main.rs
examples/hello/: Cargo.toml  README.md
examples/hello/src/: main.rs
examples/hello_async_host/: Cargo.toml  README.md
examples/hello_async_host/src/: main.rs
examples/hello_yield_function/: Cargo.toml
examples/hello_yield_function/src/: main.rs
examples/memory/: Cargo.toml
examples/memory/src/: main.rs
examples/memory_sync_host/: Cargo.toml
examples/memory_sync_host/src/: main.rs
examples/wasi_async_block_tcp/: Cargo.toml
examples/wasi_async_block_tcp/src/: main.rs
examples/wasi_async_poll_tcp/: Cargo.toml
examples/wasi_async_poll_tcp/src/: main.rs
examples/yield_sleep/: Cargo.toml
examples/yield_sleep/src/: main.rs
examples/yield_wasi_example/: Cargo.toml
examples/yield_wasi_example/src/: main.rs
examples/yield_wasi_simple_server/: Cargo.toml
examples/yield_wasi_simple_server/src/: main.rs
src/: error.rs  lib.rs  utils.rs
src/core/: ast_module.rs  config.rs  executor.rs  mod.rs  module.rs  types.rs
src/core/instance/: function.rs  memory.rs  mod.rs
src/sdk/: aot.rs  linker.rs  mod.rs  module.rs
src/sdk/instance/: function.rs  module.rs  store.rs
src/sdk/wasi/: memory.rs  mod.rs  poll_oneoff.rs  raw_types.rs
wasm/: block_tcp_listener.wasm  delay_task.wasm  hello.rs  hello.wasm  memory.rs  memory.wasm  poll_tcp_listener.wasm  simple_http_server.wasm  try_dns.wasm  try_sock_opt.wasm  wasi_impl_test.wasm  yield_count.wasm  yield_wasm_test.wasm
wasm/block_tcp_listener/: Cargo.toml
wasm/block_tcp_listener/src/: main.rs
wasm/delay_task/: Cargo.toml
wasm/delay_task/src/: main.rs
wasm/poll_tcp_listener/: Cargo.toml
wasm/poll_tcp_listener/src/: main.rs
wasm/simple_http_server/: Cargo.toml
wasm/simple_http_server/src/: main.rs
wasm/wasi_impl_test/: Cargo.toml
wasm/wasi_impl_test/src/: et_poll.rs  fs.rs  main.rs
wasm/yield_count/: Cargo.toml
wasm/yield_count/src/: main.rs
wasm/yield_wasm_test/: Cargo.toml
wasm/yield_wasm_test/src/: main.rs
wasmedge_async_wasi/: Cargo.toml
wasmedge_async_wasi/src/: lib.rs
wasmedge_async_wasi/src/snapshots/: env.rs  mod.rs
wasmedge_async_wasi/src/snapshots/common/: clock.rs  memory.rs
wasmedge_async_wasi/src/snapshots/common/net/: async_tokio.rs  mod.rs  sync.rs
wasmedge_async_wasi/src/snapshots/common/vfs/: mod.rs  sync.rs
wasmedge_async_wasi/src/snapshots/preview_1/: async_poll.rs  async_socket.rs  mod.rs  socket.rs
wasmedge_sys_ffi/: Cargo.toml  build.rs
wasmedge_sys_ffi/src/: ffi.rs
wasmedge_util/: Cargo.toml
wasmedge_util/src/: lib.rs  object_pool.rs
