[package]
name = "wasmedge-asyncify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binaryen = { version = "0.12.1", git = "https://github.com/second-state/binaryen-rs.git", branch = "feat/multi-memories-asyncify" }
wasmedge-sys-ffi = { version = "0.10", path = "./wasmedge_sys_ffi" }
wasmedge-async-wasi = { path = "./wasmedge_async_wasi" }
waker-fn = "1"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
libc = { version = "0.2" }
thiserror = "1"
scoped-tls = "1"

[dev-dependencies]
wat = "1"

[workspace]
members = ["examples/*", "wasm/*", "wasmedge_async_wasi/", "wasmedge_sys_ffi/"]
exclude = ["WasmEdge"]

[features]
default = ["aot"]
aot = []
ffi = []
