[package]
name = "wasmedge-async-wasi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
getrandom = "0.2"
tokio = { version = "1", features = ["full"], optional = true }
bitflags = "1.3"
path-absolutize = "3.0.13"
socket2 = "0.4.7"
futures = { version = "0.3" }
mio = { version = "0.8", optional = true }

[features]
default = ["async_tokio", "std_net"]
async = []
std_net = ["mio"]
async_tokio = ["async", "tokio"]
