[package]
name = "wasmedge-sys-ffi"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = { version = "0.60.1", features = [
    "runtime",
], default-features = false }

cmake = "0.1"
