[package]
name = "aot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmedge-asyncify = { path = "../../" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
simple-log = "1.6"
wat = "1"
