[package]
name = "async_wasi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmedge-asyncify = { path = "../../" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = { version = "0.3" }
