[package]
name = "wasi_impl_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmedge_wasi_socket = { version = "0.4.2", git = "https://github.com/L-jasmine/wasmedge_wasi_socket.git", branch = "preview", features = [
    "wasmedge_asyncify",
] }
log = "0.4"
env_logger = "0.9"
